--- a/package.json
+++ b/package.json
@@ -4,22 +4,36 @@
     "private": true,
     "homepage": "https://lukasz298punto.github.io/fifa-cup/",
     "dependencies": {
+        "@emotion/react": "^11.10.4",
+        "@emotion/styled": "^11.10.4",
+        "@mui/icons-material": "^5.10.6",
+        "@mui/material": "^5.10.6",
+        "@react-query-firebase/database": "^1.0.0-dev.2",
+        "@react-query-firebase/firestore": "^1.0.0-dev.7",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "firebase": "^9.10.0",
+        "i18next": "^21.9.2",
+        "lodash": "^4.17.21",
+        "postcss": "^8.4.16",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-i18next": "^11.18.6",
+        "react-query": "^3.39.2",
         "react-scripts": "5.0.1",
         "typescript": "^4.8.3",
         "web-vitals": "^2.1.4"
     },
     "devDependencies": {
-        "eslint-config-prettier": "^8.5.0",
         "@types/jest": "^27.5.2",
+        "@types/lodash": "^4.14.185",
         "@types/node": "^16.11.60",
         "@types/react": "^18.0.21",
         "@types/react-dom": "^18.0.6",
-        "gh-pages": "^4.0.0"
+        "eslint-config-prettier": "^8.5.0",
+        "gh-pages": "^4.0.0",
+        "tailwindcss": "^3.1.8"
     },
     "scripts": {
         "start": "react-scripts start",
