--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "react-dom": "^18.2.0",
         "react-i18next": "^11.18.6",
         "react-query": "^3.39.2",
+        "react-router-dom": "^6.4.1",
         "react-scripts": "5.0.1",
         "typescript": "^4.8.3",
         "web-vitals": "^2.1.4"
