--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "postcss": "^8.4.16",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-hook-form": "^7.36.1",
         "react-i18next": "^11.18.6",
         "react-query": "^3.39.2",
         "react-router-dom": "^6.4.1",
