--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "@emotion/react": "^11.10.4",
         "@emotion/styled": "^11.10.4",
+        "@hookform/resolvers": "^2.9.8",
         "@mui/icons-material": "^5.10.6",
         "@mui/material": "^5.10.6",
         "@react-query-firebase/auth": "^1.0.0-dev.2",
@@ -14,6 +15,7 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "clsx": "^1.2.1",
         "firebase": "^9.10.0",
         "i18next": "^21.9.2",
         "lodash": "^4.17.21",
@@ -26,7 +28,8 @@
         "react-router-dom": "^6.4.1",
         "react-scripts": "5.0.1",
         "typescript": "^4.8.3",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "yup": "^0.32.11"
     },
     "devDependencies": {
         "@types/jest": "^27.5.2",
