--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "dependencies": {
         "@emotion/react": "^11.10.4",
         "@emotion/styled": "^11.10.4",
-        "@hookform/resolvers": "^2.9.8",
         "@mui/icons-material": "^5.10.6",
         "@mui/material": "^5.10.6",
         "@react-query-firebase/auth": "^1.0.0-dev.2",
@@ -28,8 +27,7 @@
         "react-router-dom": "^6.4.1",
         "react-scripts": "5.0.1",
         "typescript": "^4.8.3",
-        "web-vitals": "^2.1.4",
-        "yup": "^0.32.11"
+        "web-vitals": "^2.1.4"
     },
     "devDependencies": {
         "@types/jest": "^27.5.2",
