--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "clsx": "^1.2.1",
+        "date-fns": "^2.29.3",
         "firebase": "^9.10.0",
         "i18next": "^21.9.2",
         "lodash": "^4.17.21",
