--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "firebase": "^9.10.0",
         "i18next": "^21.9.2",
         "lodash": "^4.17.21",
+        "lodash.combinations": "^18.11.1",
         "postcss": "^8.4.16",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -27,6 +28,7 @@
         "react-query": "^3.39.2",
         "react-router-dom": "^6.4.1",
         "react-scripts": "5.0.1",
+        "react-use": "^17.4.0",
         "typescript": "^4.8.3",
         "web-vitals": "^2.1.4"
     },
